voxalfa-core/src/tests/snapshots/voxalfa_validator__tests__utils__pulse_mismatch_error.snap
---
source: voxalfa-core/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] time={4,4} | voices={S,T}
---

[S] |d :r !m :f |s :l !t :d+1 ||
[T] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E016]: expected 8 pulses, got 4
 --> pulse_mismatch_error.vfa:5:1
  |
 4 | 
   | - this line has 8 pulses
 5 | [S] |d :r !m :f |s :l !t :d+1 ||
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ error
